# Home-work

./: .gitignore  README.md  pubmed_search.py  pyproject.toml  results.csv  setup.py
src/pubmed_papers/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
